--- a/part2/Phonebook/src/index.css
+++ b/part2/Phonebook/src/index.css
@@ -24,6 +24,28 @@
 
 }
 
+.success {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+
+/*
 .notification {
   border: 5px solid green;
   padding: 0.5rem;
@@ -39,3 +61,4 @@
 .notification.error {
   background-color: red;
 }
+*/
